crates/duckpond/tests/snapshots/merge__anchor_add_scenario.snap
---
source: crates/duckpond/tests/merge.rs
expression: output
---
# Authentication

Allows users to sign in with email and password.

## Requirement: Session expiration

The system SHALL expire idle sessions after 30 minutes.

> test: code

### Scenario: Idle timeout

- **GIVEN** an authenticated user
- **WHEN** the user makes no requests for 30 minutes
- **THEN** the next request returns 401

### Scenario: Force logout on password change

- **GIVEN** an authenticated user with an active session
- **WHEN** the user changes their password
- **THEN** all other sessions for that user are invalidated

> test: code
