crates/duckpond/tests/snapshots/merge__doc_add_section.snap
---
source: crates/duckpond/tests/merge.rs
assertion_line: 84
expression: output
---
# Authentication

Allows users to sign in with email and password.

## Background

Email-password was chosen over username-password to align with how users think about
identity.

## Design decisions

- **Session duration**: 30 minutes of inactivity.
- **Password storage**: argon2id with per-user salt.

## Security rationale

Email-password was chosen over social-only login because consumer users often distrust
third-party identity providers.
