crates/duckpond/tests/snapshots/merge__doc_replace_section.snap
---
source: crates/duckpond/tests/merge.rs
assertion_line: 91
expression: output
---
# Authentication

Allows users to sign in with email and password.

## Background

Email-password was chosen over username-password to align with how users think about
identity.

## Design decisions

- **Session duration**: 15 minutes of inactivity.
- **Password storage**: argon2id with per-user salt.
- **Error messages**: generic "invalid credentials" to prevent enumeration.
