crates/duckpond/tests/snapshots/merge__mixed_operations.snap
---
source: crates/duckpond/tests/merge.rs
assertion_line: 50
expression: output
---
# Authentication

Allows users to sign in with email and password.

## Requirement: Email-password authentication

The system SHALL allow a registered user to authenticate using their email address and
password.

> test: code

### Scenario: Valid credentials

- **WHEN** the user submits correct credentials
- **THEN** the system issues a session token

### Scenario: Invalid password

- **WHEN** the user submits an incorrect password
- **THEN** the system rejects the login with a generic error

## Requirement: Session expiration

The system SHALL expire idle sessions after 30 minutes.

> test: code

### Scenario: Idle timeout

- **GIVEN** an authenticated user
- **WHEN** 30 minutes pass with no requests
- **THEN** the next request returns 401

### Scenario: Force logout on password change

- **GIVEN** an authenticated user with an active session
- **WHEN** the user changes their password
- **THEN** all other sessions for that user are invalidated

> test: code

## Requirement: Two-factor authentication

The system SHALL support TOTP-based 2FA for users who opt in.

> test: code

### Scenario: 2FA enrollment

- **GIVEN** a user without 2FA enabled
- **WHEN** the user enables 2FA
- **THEN** a TOTP secret is generated
