crates/duckpond/tests/snapshots/merge__rename_requirement.snap
---
source: crates/duckpond/tests/merge.rs
expression: output
---
# Authentication

Allows users to sign in with email and password.

## Requirement: Email-password login

The system SHALL allow a registered user to authenticate.

> test: code

### Scenario: Valid credentials

- **WHEN** the user submits correct credentials
- **THEN** the system issues a session token
