crates/duckpond/tests/snapshots/merge__replace_requirement.snap
---
source: crates/duckpond/tests/merge.rs
expression: output
---
# Authentication

Allows users to sign in with email and password.

## Requirement: Session expiration

The system SHALL expire idle sessions after 15 minutes.

> test: code

### Scenario: Idle timeout

- **GIVEN** an authenticated user
- **WHEN** the user makes no requests for 15 minutes
- **THEN** the next request returns 401
